# UpdatingHDmapByMonoCamera

./: LICENSE  README.md
apollo_hdmap_example/: README.md  base_map.txt
apollo_hdmap_example/proto/: BUILD  map.proto  map_clear_area.proto  map_crosswalk.proto  map_geometry.proto  map_id.proto  map_junction.proto  map_lane.proto  map_overlap.proto  map_parking_space.proto  map_road.proto  map_signal.proto  map_speed_bump.proto  map_speed_control.proto  map_stop_sign.proto  map_yield_sign.proto
dataset/: 数据说明.rtf
dataset/enu_data/: divider_hdmap.txt  landmark_hdmap.txt  traffic_hdmap.txt
dataset/proto/: Divider.pb.cc  Divider.pb.h  Divider_pb2.py  HDMap.pb.cc  HDMap.pb.h  HDMap_pb2.py  LaneMarking.pb.cc  LaneMarking.pb.h  LaneMarking_pb2.py  SourceInfo.pb.cc  SourceInfo.pb.h  SourceInfo_pb2.py  TrafficLight.pb.cc  TrafficLight.pb.h  TrafficLight_pb2.py  readme.md
detection/: readme.md
detection/deeplabv3p/: 20190129104232_e58b8b3d6ac89c45c2a50d84ba822803_4_343@divider.txt  readme.md
detection/keras-yolov3/: 2007_test.txt  2007_train.txt  2007_val.txt  make_main_txt.py  train.py  voc_annotation.py  yolo.py  yolo_video.py
detection/mmdetection/: .gitignore  cut_weight.py  (+2 more)
geos_parse/: README.md
geos_parse/geos_test/bigtest/: CMakeLists.txt
geos_parse/hdmap_pub/hd_map/: CMakeLists.txt
geos_parse/hdmap_pub/hd_map/script/: TrafficLight.proto
geos_parse/prototxt_rw/: CMakeLists.txt
geos_parse/prototxt_rw/config/: new.prototxt  test.prototxt
geos_parse/prototxt_rw/io/: io.h
geos_parse/prototxt_rw/proto/: test.pb.cc  test.pb.h  test.proto
geos_parse/prototxt_rw/src/: prototest.cpp  prototest.h
hdmap/: CMakeLists.txt  GPS.txt  README.md
hdmap/data/: divider_hdmap.txt  landmark_hdmap.txt  readme.txt
hdmap/data/detection_result/: diciider.txt  ttf.txt
hdmap/data/detection_result/divider/: 20190123112752_7ac6ab9d61d94314188426910d324c39_4divider.pb
hdmap/data/detection_result/trafficlight/: 20190123112752_7ac6ab9d61d94314188426910d324c39_4detect_trafficlight.pb
hdmap/data/detection_result_1/traffic_light_bbox/: 20190123112752_7ac6ab9d61d94314188426910d324c39_4_097@traffic_light.txt  20190123112838_3faf30bde99e0f126cda2432ec90a621_4_299@traffic_light.txt  20190123112838_3faf30bde99e0f126cda2432ec90a621_4_318@traffic_light.txt  20190123112924_d5096201da81bc8443f1aabccef099c0_4_028@traffic_light.txt  20190123112924_d5096201da81bc8443f1aabccef099c0_4_075@traffic_light.txt  20190123112924_d5096201da81bc8443f1aabccef099c0_4_152@traffic_light.txt  20190123112924_d5096201da81bc8443f1aabccef099c0_4_500@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_167@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_376@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_377@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_385@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_392@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_393@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_403@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_404@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_405@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_408@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_409@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_412@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_413@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_415@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_418@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_419@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_422@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_423@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_424@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_425@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_426@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_428@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_429@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_430@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_432@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_433@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_434@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_435@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_439@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_442@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_444@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_445@traffic_light.txt  20190123113008_b08f1681cd797af27e6c4458bf33755b_4_448@traffic_light.txt  (+4511 more)
hdmap/proto/: Divider.pb.cc  Divider.pb.h  HDMap.pb.cc  HDMap.pb.h  LaneMarking.pb.cc  LaneMarking.pb.h  SourceInfo.pb.cc  SourceInfo.pb.h  TrafficLight.pb.cc  TrafficLight.pb.h
hdmap/src/: ORBextractor.cc  Utils.cc  main.cpp  main_zj.cpp  pix2ENU.cpp  test.cpp  test.h
hdmap/utils/: ORBextractor.h  Utils.h  build_depth.h  calulate.h  consts.h  container.h  pix2enu.h  pixel2enu.h  read_detection.h  read_hdmap.h  vo.h  vo_extra.h
transform/坐标转换/deecamp/: CMakeLists.txt  Utils.cc  main.cpp
transform/坐标转换/deecamp/proto/: Divider.pb.cc  Divider.proto  HDMap.pb.cc  HDMap.pb.h  LaneMarking.pb.h  SourceInfo.pb.cc  SourceInfo.pb.h  TrafficLight.pb.cc  TrafficLight.pb.h
visualization/: README.md  readme.md
visualization/hdmap_pub/hd_map/: package.xml
visualization/hdmap_pub/hd_map/launch/: hdmap.launch
visualization/hdmap_pub/hd_map/script/: Divider_pb2.py  HDMap.proto  HDMap_pb2.py  LaneMarking_pb2.py  SourceInfo_pb2.py  map_pub.py  pcl_util.py
visualization/hdmap_pub/hdmap_viewer/: CMakeLists.txt
visualization/hdmap_pub/hdmap_viewer/src/: Utils.cc  hdmap_viewer.cpp
(+651 files in other folders)
