<?xml version="1.0"?>
<package>
  <name>hd_map</name>
  <version>0.0.0</version>
  <description>The hdmappackage</description>
  <maintainer email="liufenggang@qq.com">liufenggang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
<!--  <build_export_depend>message_generation</build_export_depend>-->
<!--  <exec_depend>message_runtime</exec_depend>-->
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
  </export>
</package>
